public/stylesheets/fridge.css
html {
    background-image:url('../images/3.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    min-height: 100%;
    text-align: center;
    font-size: 1rem;
}

body {
    background-color: transparent;
    height: 100%;
    font-family: 'Jua', sans-serif;
}

#fridgeDoorHeader {
  margin: 10% auto;
  width: 100%;
  text-align: center;
}
#menu {
  width: 100%;
}
li.links {
  margin: 10px auto;
  font-size: 20pt;
  width: 250px;
}
.fridgeDoor {
  position: absolute;
  z-index: 10;
  height: 100%;
  background-color: white;
  -webkit-transition: width 0.4s ease;
    -moz-transition: width 0.4s ease;
    -o-transition: width 0.4s ease;
    transition: width 0.4s ease;
  box-shadow: 0px 3px 3px 3px rgba(0,0,0,0.3);
}

div.fridgeDoor .hideAnchors{
  display: none;
}

.handle {
  height: 30%;
  width: 10px;
  background-color: rgb(75,0,130);
  position: absolute;
  top: 250px;
  z-index: 10;
  border-radius: 30%;
  -webkit-transition: left 0.6s ease;
    -moz-transition: left 0.6s ease;
    -o-transition: left 0.6s ease;
    transition: left 0.6s ease;
}
.openDoor {
  width: 6%;
  border-top-right-radius: 50%;
}
.openDoorHandle {
  top: 31%;
  left: 30%;
}
.closedDoor {
  width: 100%;
  border-radius: 0px;
}
.closedDoorHandle {
  left: 90%;
}


.footerStuff {
    position: absolute;
    bottom: 10px;
}

#userPageAnchor:hover {
  cursor: pointer;
  color:rgb(128,128,128);
}
#scanPageAnchor:hover {
  cursor: pointer;
  color:rgb(128,128,128);
}
#addPageAnchor:hover {
  cursor: pointer;
  color:rgb(128,128,128);
}
#aboutPageAnchor:hover {
  cursor: pointer;
  color:rgb(128,128,128);
}
#notificationPageAnchor:hover {
  cursor: pointer;
  color:rgb(128,128,128);
}
#logout:hover {
  text-decoration: none;
  cursor: pointer;
  color:rgb(128,128,128);
}
#logout {
  color: black;
}



/*******************************************************************************************/
/*******************************         ABOUT         *************************************/
/*******************************************************************************************/


@media (min-width: 576px) {
    html .row{ font-size: 1.1rem; }
}
@media (min-width: 768px) {
    html .row{ font-size: 1.25rem; }
}
@media (min-width: 992px) {
    html .row{ font-size: 1.30rem; }
}
@media (min-width: 1200px) {
    html .row{ font-size: 1.4rem; }
}

img {
    width: 45%;
    text-align: center;
}

.people {
    width: 40%;
}

.big{
  font-size: 120%;
}

#roundEdge {
    border-radius: 0.25rem;
}

#aboutPage {
    display:none;
}

/*******************************************************************************************/
/*******************************  FIRST PAGE           *************************************/
/*******************************************************************************************/

buttonBackground {
    background-color:rgb(0, 0, 0, 0);
}

#inventoryBg h1 {
    font-size: 200%;
}



.progressBar {
    width: calc(100% - 40px);
    height: 40px;
    background: #343a40;
    border-style: 2px solid white;
    border-radius: 10px;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
}
.btn.deleteButton {
    width: 40px;
    background-color: rgb(255, 230, 230);
    color: #343a40;
    border-radius: 10px;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
}

#fridgeHead {
    text-align: center;
    background-color: #87CEFA;
    color: white;
}

h1 {
    display: inline-block;
}


.numberOfList {
    display:inline-flex;
    font-size: 150%;
    border-radius: 5%;
    padding:5px;
}
.progressBarContent{
    margin:auto;
    font-size:18px;
    text-align: center;
}

/*********** logout ***********/
#logoutButton {
    background-color: rgb(0, 0, 0, 0);
    border:0;
    cursor:pointer;
}
#logoutButton:active{
    border-style: none;
    border:0;
}

.dropdown-menu {
    background-color : rgb(44, 62, 80);
}
.dropdown-item {
    color : rgb(255, 255, 255);
}

#userPage{
    background-color: rgb(235, 235, 249);
    height: 50%;
}


/*******************************************************************************************/
/**********************************  scanning page       *************************************/
/*******************************************************************************************/

#close-loader {
  display: none;
}
#loaderModal.modal {
  background-color: rgba(255,255,255,0);
  box-shadow: none;
  -webkit-box-shadow: none;
  width: 100%;
  max-width: none;
  margin: 0;
  padding: 0;
}
.loader {
    border: 16px solid #f3f3f3; /* Light grey */
    border-top: 16px solid #3498db; /* Blue */
    border-radius: 50%;
    width: 120px;
    height: 120px;
    animation: spin 1s linear infinite;
    margin: 20% auto;
}
/***for loader****/
@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}
#scanSubmit {
  width: 80%;
  -webkit-box-shadow: 1px 0px 3px 3px rgba(0,0,0,0.1);  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
  -moz-box-shadow:    1px 0px 3px 3px rgba(0,0,0,0.1);  /* Firefox 3.5 - 3.6 */
  box-shadow:         1px 0px 3px 3px rgba(0,0,0,0.1);
  -webkit-box-shadow: -1px 0px 3px 3px rgba(0,0,0,0.1);  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
  -moz-box-shadow:    -1px 0px 3px 3px rgba(0,0,0,0.1);  /* Firefox 3.5 - 3.6 */
  box-shadow:         -1px 0px 3px 3px rgba(0,0,0,0.1);
  -webkit-box-shadow: 0px 1px 3px 3px rgba(0,0,0,0.1);  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
  -moz-box-shadow:    0px 1px 3px 3px rgba(0,0,0,0.1);  /* Firefox 3.5 - 3.6 */
  box-shadow:         0px 1px 3px 3px rgba(0,0,0,0.1);
  -webkit-box-shadow: 0px -1px 3px 3px rgba(0,0,0,0.1);  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
  -moz-box-shadow:    0px -1px 3px 3px rgba(0,0,0,0.1);  /* Firefox 3.5 - 3.6 */
  box-shadow:         0px -1px 3px 3px rgba(0,0,0,0.1);
}

.addItemsForm {
    background-color : rgb(0, 0, 0, 0.5);
    border-radius: 10px;
    width : 85%;
    margin : 0 auto;
    padding : 10px;
}

.addItemsForm .form-control-plaintext {
  color: white;
}
#scannerForm {
  display: none;
  width:80%;
}

#scannerForm .userID {
  display: none;
}

#scannerFormSubmit {
  width: 100%;
}

#scanPlaceholder {
    width: 35%;
    height: 35%;
}
#scanPage {
    background-color: rgb(235, 235, 249);
    padding:2%;
    display:none;
}
#imageInput {
    width:60%;
    margin:0 auto;
}

.scannerDelete {
    background-color: rgb(255, 230, 230);
    border-radius: 5%;
    width:60px !important; /**change button width here**/
}

.row {

}

/*******************************************************************************************/
/**********************************  add item page       *************************************/
/*******************************************************************************************/
.addItems-settings-space {
  height: 50px;
}

.btn {
  width: 25%;
  border-radius: 0;
}

#addFrame {
    background-color : rgb(0, 0, 0, 0.5);
    border-radius: 10px;
    width : 85%;
    margin : 0 auto;
    padding : 10px;
    position: absolute;
    top: 30%;
    left: 10%;
}

#category {
    display: flex;
    margin: 0 auto;
}

.add {
    color : black;
    text-align: center;
    font-size : 150%;
}

.navbar {
    margin-bottom : 10px;
}

#submit {
    width : 100%;
}

#ExpiryDate {
    margin-top: 10px;
}


#addPage {
    display:none;
}

#easterModal {
    position:absolute;
    margin:0 auto;
    padding:0;
    border: 0;
}

/*******************************************************************************************/
/**********************************  notification button and page       *************************************/
/*******************************************************************************************/

.notificationSettingButton {
    background-image: url( '../images/cog.png' );
    background-size: 15px 15px;
    height: 15px;
    width: 15px;
    background-color: Transparent;
    background-repeat:no-repeat;
    border: none;
    cursor:pointer;
    overflow: hidden;
    margin-top: 10px;
    margin-right: 5px;
}

#notificationFrame {
    background-color : rgb(0, 0, 0, 0.5);
    border-radius: 10px;
    width : 85%;
    margin : 0 auto;
    padding : 10px;
}

#notificationSettingPage {
    display: none;
}

.notice {
  padding: 0;
}

.daysNotice {
  text-align: center;
}

/*******************************************************************************************/
/**********************************  footer      *************************************/
/*******************************************************************************************/


.flex-grow {
   flex: 1;
}

footer {
    position: relative;
    clear:both;
}

 #googleClick {
    color: white;
    border-radius: 0;
    margin-top: 5%;
 }

/*******************************************************************************************/
/************************          log out button      *************************************/
/*******************************************************************************************/

.shareFooter {
    padding-left: 10px;
}

.alert {
    position: fixed;
    width: 60%;
    left: 20%;
    bottom: 0%;
    text-align: center;
}

